--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "A MERN stack application for connection people with their poison",
   "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node server.ts",
+    "server": "nodemon -x ts-node server.ts",
+    "client": "npm start --prefix client",
+    "client-install": "npm install --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
@@ -15,5 +20,19 @@
   "bugs": {
     "url": "https://github.com/mmcxii/manhattan-project/issues"
   },
-  "homepage": "https://github.com/mmcxii/manhattan-project#readme"
+  "homepage": "https://github.com/mmcxii/manhattan-project#readme",
+  "dependencies": {
+    "@types/express": "^4.17.1",
+    "@types/mongoose": "^5.5.19",
+    "@types/node": "^12.7.11",
+    "express": "^4.17.1",
+    "mongoose": "^5.7.3",
+    "ts-mongoose": "0.0.19",
+    "ts-node": "^8.4.1",
+    "typescript": "^3.6.3"
+  },
+  "devDependencies": {
+    "concurrently": "^4.1.2",
+    "nodemon": "^1.19.3"
+  }
 }
