--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
   },
   "homepage": "https://github.com/mmcxii/manhattan-project#readme",
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.1",
     "@types/mongoose": "^5.5.19",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.7.11",
+    "@types/passport": "^1.0.1",
+    "bcrypt": "^3.0.6",
     "express": "^4.17.1",
     "mongoose": "^5.7.3",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "ts-mongoose": "0.0.19",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.3"
