--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.7.11",
     "@types/passport": "^1.0.1",
+    "@types/passport-local": "^1.0.33",
     "bcrypt": "^3.0.6",
     "express": "^4.17.1",
     "mongoose": "^5.7.3",
