--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/mongoose": "^5.5.19",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.7.11",
+    "axios": "^0.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.3",
     "morgan": "^1.9.1",
