--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/passport": "^1.0.1",
     "@types/passport-jwt": "^3.0.2",
     "@types/passport-local": "^1.0.33",
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
