--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.7.3",
     "morgan": "^1.9.1",
+    "react-overdrive": "0.0.10",
     "ts-mongoose": "0.0.19",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.3"
