--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.7.11",
     "bcrypt": "^3.0.6",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.3",
