--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,14 @@
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
     "@types/react-router-dom": "^5.1.0",
+    "@types/socket.io-client": "^1.4.32",
     "@types/styled-components": "^4.1.19",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-normalize": "^0.4.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "socket.io-client": "^2.3.0",
     "styled-components": "^4.4.0",
     "typescript": "3.6.3"
   },
