--- a/client/package.json
+++ b/client/package.json
@@ -44,5 +44,6 @@
     "@typescript-eslint/parser": "^2.3.2",
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-react": "^7.15.1"
-  }
+  },
+  "proxy": "http://localhost:6969"
 }
