--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.1",
+    "@types/express-fileupload": "^1.1.0",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/mongoose": "^5.5.19",
     "@types/morgan": "^1.7.37",
@@ -33,6 +34,7 @@
     "bcrypt": "^3.0.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6-alpha.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.3",
     "morgan": "^1.9.1",
