--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/mongoose": "^5.5.19",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.7.11",
+    "@types/sharp": "^0.23.0",
     "@types/socket.io": "^2.1.4",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
@@ -38,6 +39,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.3",
     "morgan": "^1.9.1",
+    "sharp": "^0.23.1",
     "socket.io": "^2.3.0",
     "ts-mongoose": "0.0.19",
     "ts-node": "^8.4.1",
