--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/mmcxii/manhattan-project#readme",
   "dependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.1",
     "@types/express-fileupload": "^1.1.0",
@@ -31,6 +32,7 @@
     "@types/node": "^12.7.11",
     "@types/sharp": "^0.23.0",
     "@types/socket.io": "^2.1.4",
+    "aws-sdk": "^2.556.0",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "dotenv": "^8.2.0",
