--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "client": "npm start --prefix client",
     "client-install": "npm install --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+    "test": "jest --config ./jest.config.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,9 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.1",
     "@types/express-fileupload": "^1.1.0",
+    "@types/jest": "^24.0.19",
     "@types/jsonwebtoken": "^8.3.5",
+    "@types/mongodb-memory-server": "^1.8.0",
     "@types/mongoose": "^5.5.19",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.7.11",
@@ -41,12 +44,16 @@
     "morgan": "^1.9.1",
     "sharp": "^0.23.1",
     "socket.io": "^2.3.0",
+    "ts-jest": "^24.1.0",
     "ts-mongoose": "0.0.19",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.3"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.1.3",
     "concurrently": "^4.1.2",
+    "jest": "^24.9.0",
+    "mongodb-memory-server-global": "^6.0.1",
     "nodemon": "^1.19.3"
   }
 }
