--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^12.7.11",
     "@types/sharp": "^0.23.0",
     "@types/socket.io": "^2.1.4",
+    "@types/supertest": "^2.0.8",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "dotenv": "^8.2.0",
@@ -51,15 +52,16 @@
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.1.3",
-    "concurrently": "^4.1.2",
-    "jest": "^24.9.0",
-    "mongodb-memory-server-global": "^6.0.1",
-    "nodemon": "^1.19.3",
     "@typescript-eslint/eslint-plugin": "^2.5.0",
     "@typescript-eslint/parser": "^2.5.0",
+    "concurrently": "^4.1.2",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "prettier": "^1.18.2"
+    "jest": "^24.9.0",
+    "mongodb-memory-server-global": "^6.0.1",
+    "nodemon": "^1.19.3",
+    "prettier": "^1.18.2",
+    "supertest": "^4.0.2"
   }
 }
