--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "sharp": "^0.23.1",
     "socket.io": "^2.3.0",
     "ts-mongoose": "0.0.19",
-    "ts-node": "^8.4.1",
     "typescript": "^3.6.3"
   },
   "devDependencies": {
@@ -59,6 +58,7 @@
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-prettier": "^3.1.1",
     "nodemon": "^1.19.3",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "ts-node": "^8.4.1"
   }
 }
