--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@types/socket.io-client": "^1.4.32",
     "@types/styled-components": "^4.1.19",
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "query-string": "^6.8.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
