--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -20,7 +20,8 @@
     "@typescript-eslint/ban-ts-ignore": 0,
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/semi": ["error"],
-    "react/no-unescaped-entities": 0
+    "react/no-unescaped-entities": 0,
+    "react/prop-types": 0
   },
   "settings": {
     "react": {
