--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -21,7 +21,8 @@
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/semi": ["error"],
     "react/no-unescaped-entities": 0,
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "no-irregular-whitespace": 0
   },
   "settings": {
     "react": {
